--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:duyng219/crwn-clothing.git",
+  "author": "hding2196 <hding2196@gmail.com>",
+  "license": "MIT"
 }
